; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ata/chipsets/extr_ata-fsl.c_imx_ata_intr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ata/chipsets/extr_ata-fsl.c_imx_ata_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ata_pci_controller = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32, i32 (i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @imx_ata_intr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @imx_ata_intr(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.ata_pci_controller*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.ata_pci_controller*
  store %struct.ata_pci_controller* %5, %struct.ata_pci_controller** %3, align 8
  %6 = load %struct.ata_pci_controller*, %struct.ata_pci_controller** %3, align 8
  %7 = getelementptr inbounds %struct.ata_pci_controller, %struct.ata_pci_controller* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 8
  %9 = load %struct.ata_pci_controller*, %struct.ata_pci_controller** %3, align 8
  %10 = getelementptr inbounds %struct.ata_pci_controller, %struct.ata_pci_controller* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = call i32 @bus_read_2(i32 %11, i32 40)
  %13 = call i32 @bus_write_2(i32 %8, i32 40, i32 %12)
  %14 = load %struct.ata_pci_controller*, %struct.ata_pci_controller** %3, align 8
  %15 = getelementptr inbounds %struct.ata_pci_controller, %struct.ata_pci_controller* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i64 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  %19 = load i32 (i32)*, i32 (i32)** %18, align 8
  %20 = load %struct.ata_pci_controller*, %struct.ata_pci_controller** %3, align 8
  %21 = getelementptr inbounds %struct.ata_pci_controller, %struct.ata_pci_controller* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i64 0
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = call i32 %19(i32 %25)
  ret void
}

declare dso_local i32 @bus_write_2(i32, i32, i32) #1

declare dso_local i32 @bus_read_2(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
